emb/src/main/java/com/example/emb/global/error/exception/GlobalErrorCode.java
package com.example.emb.global.error.exception;public enum GlobalErrorCode {
}
